# forgebar

./: Cargo.toml  justfile
src/: main.rs
src/widgets/: clock.rs  workspaces.rs
