[package]
name = "forgebar"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4.41"
gtk4 = "0.9.7"
gtk4-layer-shell = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.35.2"
serde_json = "1.0.140"
glib = "0.20.12"
